<?xml version="1.0" encoding="UTF-8"?>
<!--
  #%L
  OfficeFloor SAM Maven Plugin
  %%
  Copyright (C) 2005 - 2021
Daniel Sagenschneider
  %%
  Licensed under the Apache License, Version 2.0 (the
"License");
  you may not use this file except in compliance with the License.
You may obtain a copy of the License at
http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable
law or agreed to in writing, software
  distributed under the License is
distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
either express or implied.
  See the License for the specific language governing
permissions and
  limitations under the License.
  #L%
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.officefloor.maven.test</groupId>
	<artifactId>Sam</artifactId>
	<version>@project.version@</version>
	<name>SAM Integration</name>
	<description>Integration tests the officefloor-sam-maven-plugin</description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<!--
		<officefloor-version>@project.version@</officefloor-version>
		-->
		<officefloor-version>3.41.0</officefloor-version>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>net.officefloor</groupId>
				<artifactId>bom</artifactId>
				<version>${officefloor-version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>net.officefloor.web</groupId>
			<artifactId>woof</artifactId>
		</dependency>
		<dependency>
			<groupId>net.officefloor.server</groupId>
			<artifactId>officeserver_sam</artifactId>
		</dependency>
		<dependency>
			<groupId>net.officefloor.persistence</groupId>
			<artifactId>officenosql_dynamodb</artifactId>
		</dependency>
		<dependency>
			<groupId>net.officefloor.web</groupId>
			<artifactId>woof_test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.officefloor.persistence</groupId>
			<artifactId>officenosql_dynamodb_test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.officefloor.server</groupId>
			<artifactId>officeserver_test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.2</version>
				<configuration>
					<argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<configuration>
					<transformers>
						<transformer
							implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
					</transformers>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>Integration Test</id>
			<activation>
				<property>
					<name>officefloor.docker.available</name>
					<value>!false</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>net.officefloor.maven</groupId>
						<artifactId>officefloor-sam-maven-plugin</artifactId>
						<version>${officefloor-version}</version>
						<configuration>
							<samPort>8181</samPort>
							<env>
								<OFFICEFLOOR_TEST>TEST_ENV</OFFICEFLOOR_TEST>
							</env>
						</configuration>
						<executions>
							<execution>
								<id>start</id>
								<phase>pre-integration-test</phase>
								<goals>
									<goal>start</goal>
								</goals>
							</execution>
							<execution>
								<id>stop</id>
								<phase>post-integration-test</phase>
								<goals>
									<goal>stop</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>2.22.2</version>
						<configuration>
							<argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>integration-test</goal>
									<goal>verify</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
